   Note that there might be trouble if there's already a file in the
   directory where wget would normally save the download.

Enhancements
~~~~~~~~~~~~

 * dtrx will try to extract ZIP files with 7z if unzip is not successful.
   Thanks to Edward H for reporting this bug.

 * dtrx will be smarter about removing extensions from filenames when
   extracting to a new directory or file.

Version 6.6
-----------

Enhancements
~~~~~~~~~~~~

 * dtrx can now handle `xz compression`_.

.. _xz compression: http://tukaani.org/xz/

Other changes
~~~~~~~~~~~~~

 * The tests now use the PyYAML library, instead of the abandoned Syck.
   Thanks to Miguelangel Jose Freitas Loreto for a patch.

Version 6.5
-----------

Enhancements
~~~~~~~~~~~~

 * When you list archive contents with -l or -t, dtrx will start printing
   results much faster than it used to.  There's a small chance that it
   will print some incorrect listings if it misdetects the archive type of
   a given file, but it will show you an error message when that happens.

 * dtrx recognizes more kinds of compressed tar archives by their
   extension.

 * You can now extract newer .deb packages that are compressed with bzip2
   or lzma.

Bug fixes
~~~~~~~~~

 * When extracting an archive that contained a file with a mismatched
   filename, the prompt would offer you a chance to "rename the directory"
   instead of "rename the file."  This wording has been fixed, along with
   some other wording adjustments in the prompts generally.

 * Perform more reliable detection of the terminal size, and improve word
   wrapping on prompts.

Other changes
~~~~~~~~~~~~~

 * The README is now written like a man page, and can be converted to a man
   page by using rst2man_.

.. _rst2man: http://docutils.sourceforge.net/sandbox/manpage-writer/

Version 6.4
-----------

Enhancements
~~~~~~~~~~~~

 * Support detection of LZMA archives by magic.

 * Interactive prompts are wrapped much more cleanly.

Bug fixes
~~~~~~~~~
